force-app/main/default/objects/HttpResponse__e/HttpResponse__e.object-meta.xml
<CustomObject>
    <label>Http Response</label>
    <pluralLabel>Http Responses</pluralLabel>
</CustomObject>