force-app/main/default/objects/HttpResponse__e/fields/EndpointSetting__c.field-meta.xml
<CustomField>
    <fullName>EndpointSetting__c</fullName>
    <description>The qualified API name of the Endpoint settings</description>
    <label>Endpoint Setting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>