force-app/main/default/objects/HttpResponse__e/fields/IsSuccess__c.field-meta.xml
<CustomField>
    <fullName>IsSuccess__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A boolean identifier for whether the callout was successful</description>
    <label>Success</label>
    <type>Checkbox</type>
</CustomField>