force-app/main/default/objects/HttpResponse__e/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>The results of HttpResponse.getStatus()</description>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>