force-app/main/default/objects/HttpResponse__e/fields/StatusCode__c.field-meta.xml
<CustomField>
    <fullName>StatusCode__c</fullName>
    <description>The results of HttpResponse.getStatusCode()</description>
    <label>Status Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>